syntax = "proto3";

package kv_ecs;

message UpdateTopologyRequest {
  string updated_network_topology = 1;
}

message UpdateTopologyResponse {}

message PingRequest {}

message PongResponse {}

service KVECS {
  // Both RPCs have same params and return type, matching is done according to network topology
  rpc UpdateTopology(UpdateTopologyRequest) returns (UpdateTopologyResponse);
  rpc Ping(PingRequest) returns (PongResponse);
}
